--- a/1_LSIRM_2018.html
+++ b/1_LSIRM_2018.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Simon Kiss" />
 
-<meta name="date" content="2017-07-13" />
+<meta name="date" content="2018-07-13" />
 
 <title>LSIRM 2017: Introduction to R</title>
 
@@ -1548,7 +1548,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">LSIRM 2017: Introduction to R</h1>
 <h4 class="author"><em>Simon Kiss</em></h4>
-<h4 class="date"><em>2017-07-13</em></h4>
+<h4 class="date"><em>2018-07-13</em></h4>
 
 </div>
 
@@ -1594,8 +1594,6 @@ div.tocify {
 <li><code>tibble</code>, for tibbles, a modern re-imagining of data frames.</li>
 </ol>
 <pre class="r"><code>library(tidyverse)</code></pre>
-<p>In addition, we’ll need the haven package from the <code>tidyverse</code> to load data into R</p>
-<pre class="r"><code>library(haven)</code></pre>
 <p>And then, we’ll need a few more libraries from base R to do our work.</p>
 </div>
 <div id="data-types" class="section level2">
@@ -1608,7 +1606,7 @@ div.tocify {
 </div>
 <div id="character" class="section level3">
 <h3>Character</h3>
-<p>Character strings (e.g. letters and numbers stored as characters, not numbers) have to be single-quoted. Note, in general it’s best to use single-quotes when dealing with single strings. When combining multiple strings, double-quotes should be used.</p>
+<p>Character strings (e.g. letters and numbers stored as characters, not numbers) have to be single-quoted. Note, in general it’s best to use single-quotes when dealing with single strings.</p>
 <pre class="r"><code>char&lt;-'1'</code></pre>
 <p>You can compare what both look like by printing both to the screen.</p>
 <pre class="r"><code>num</code></pre>
@@ -1635,7 +1633,7 @@ lucky&lt;-c(1,2,3)</code></pre>
 <h4>Assignment 1</h4>
 <blockquote>
 <ol style="list-style-type: decimal">
-<li>Combine <code>age</code>, <code>gender</code> and <code>lucky</code> into one matrix called <code>matrix1   with 3 columns and n rows using the</code>matrix()<code>command, the</code>ncol=<code>and/or the</code>nrow=` arguments.**</li>
+<li>Combine <code>age</code>, <code>gender</code> and <code>lucky</code> into one matrix called <code>matrix1</code> with 3 columns and n rows using the <code>matrix()</code> command, the <code>ncol=</code> and/or the <code>nrow=</code> arguments.**</li>
 </ol>
 </blockquote>
 <pre class="r"><code>matrix1&lt;-matrix(c(age, gender, lucky), nrow=3, ncol=3)</code></pre>
@@ -1657,7 +1655,6 @@ gender[1]</code></pre>
 <h4>Assignment 3</h4>
 <blockquote>
 <ol style="list-style-type: decimal">
-<li></li>
 <li>Get the first row of <code>matrix1</code></li>
 <li>then get the second row</li>
 <li>Then return the first column of <code>matrix1</code></li>
@@ -1672,16 +1669,22 @@ matrix1[,1]</code></pre>
 <h4>Assignment 4</h4>
 <blockquote>
 <ol style="list-style-type: decimal">
-<li></li>
 <li>Return the first through third columns of <code>matrix1</code>.<br />
 </li>
 <li>Return the first and third columns of <code>matrix1</code>.</li>
 </ol>
 </blockquote>
 <pre class="r"><code>#First through third
-matrix1[1:3,]
-#first and third
+matrix1[1:3,]</code></pre>
+<pre><code>##      [,1] [,2] [,3]
+## [1,]   18    0    1
+## [2,]   22    1    2
+## [3,]   33    0    3</code></pre>
+<pre class="r"><code>#first and third
 matrix1[c(1,3),]</code></pre>
+<pre><code>##      [,1] [,2] [,3]
+## [1,]   18    0    1
+## [2,]   33    0    3</code></pre>
 </div>
 </div>
 <div id="data-frames" class="section level3">
@@ -1742,12 +1745,13 @@ class(df$age)</code></pre>
 <p>Factors are particular types of character vectors. Factors are R's term for categorical variables. Storing character vectors as factors allows the user to instruct R to treat it like a categorical variable. The key attribute that factor have is levels, which are like the value labels in SPSS. There is a key difference between SPSS value labels and factor levels, however, which we will return to below.</p>
 <p>In our example of <code>genders</code> and <code>ages</code>, we want to convert the 1s in the gender variable to female and the 0s to males. car’s <code>Recode()</code> command is the ticket. It is one of the most versatile and frequently used packages in R. Get used to it, quickly!</p>
 <pre class="r"><code>library(car)</code></pre>
-<pre class="r"><code>Recode(df$gender, &quot;0='male' ; 1='female'&quot;, as.factor=T)</code></pre>
+<pre class="r"><code>Recode(df$gender, &quot;0='male' ; 1='female'&quot;, as.factor=TRUE)</code></pre>
 <pre><code>## [1] male   female male  
 ## Levels: female male</code></pre>
 <pre class="r"><code>df$gender2&lt;-Recode(df$gender, 
                    &quot;0='male' ; 1='female'&quot;, 
-                   as.factor=T)</code></pre>
+                   as.factor=TRUE)</code></pre>
+<p>You can check the levels of a factor with the <code>levels()</code> command.</p>
 <pre class="r"><code>levels(df$gender2)</code></pre>
 <pre><code>## [1] &quot;female&quot; &quot;male&quot;</code></pre>
 </div>
